--- a/src/component/talk/Talk.scss
+++ b/src/component/talk/Talk.scss
@@ -112,6 +112,10 @@
   width: 100%;
 }
 
+.submitBtnMobile {
+  composes: button;
+}
+
 .zendeskLogoButton {
   margin-bottom: #{40/$font-size}rem;
 }
