--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -36,7 +36,7 @@ $field-margin-bottom: #{20/$font-size}rem;
 
 // Errors
 $error-color: $zd-color-red-500;
-$error-text-color: $zd-color-monsoon;
+$error-text-color: $zd-color-red-700;
 $error-background-color: rgba($error-color, 0.1);
 
 // Spacing units and rem calculations
