--- a/src/styles/components/Error.scss
+++ b/src/styles/components/Error.scss
@@ -3,9 +3,9 @@
 .Error {
   background-color: $error-background-color;
   border-radius: #{4/$font-size}rem;
-  border: #{1/$font-size}rem solid $zd-color-flamingo;
+  border: #{1/$font-size}rem solid $zd-color-red-300;
   color: $error-text-color;
-  padding: #{10/$font-size}rem #{13/$font-size}rem;
+  padding: #{13/$font-size}rem #{13/$font-size}rem;
   line-height: #{18/$font-size}rem;
 }
 
@@ -20,8 +20,8 @@
 
     g {
       circle {
-        stroke: $zd-color-flamingo;
-        fill: $zd-color-flamingo;
+        stroke: $zd-color-red-600;
+        fill: $zd-color-red-600;
       }
 
       path {
