--- a/src/component/chat/chatting/ChattingFooter.scss
+++ b/src/component/chat/chatting/ChattingFooter.scss
@@ -38,10 +38,10 @@
 
 .iconActive {
   cursor: pointer;
-  background: $zd-color-platinum;
+  background: $zd-color-grey-200;
 
   svg > g {
-    fill: $zd-color-dark-gray !important;
+    fill: $zd-color-grey-700 !important;
   }
 }
 
@@ -58,7 +58,7 @@
   }
 
   &:hover, &:active, &:focus {
-    background: $zd-color-platinum;;
+    background: $zd-color-grey-200;
   }
 }
 
@@ -73,13 +73,13 @@
     padding-right: 0;
 
     path {
-      stroke: $zd-color-aluminum !important;
+      stroke: $zd-color-grey-500 !important;
     }
   }
 
   &:hover, &:active, &:focus {
     svg > path {
-      stroke: $zd-color-dark-gray !important;
+      stroke: $zd-color-grey-700 !important;
     }
   }
 }
@@ -104,14 +104,14 @@
     padding: #{8/$font-size}rem #{7/$font-size}rem #{8/$font-size}rem #{9/$font-size}rem;
 
     path {
-      fill: $zd-color-aluminum !important;
+      fill: $zd-color-grey-500 !important;
     }
   }
 }
 
 .iconDisabled {
   svg > g {
-    fill: $zd-color-grey-400 !important;
+    fill: $zd-color-grey-300 !important;
   }
 
   &:hover, &:active, &:focus {
@@ -119,7 +119,7 @@
     background: none;
 
     svg > g {
-      fill: $zd-color-grey-400 !important;
+      fill: $zd-color-grey-300 !important;
     }
   }
 }
