Port over some remaining greys to their new garden variables

--- a/src/component/channelChoice/ChannelChoiceDesktop.scss
+++ b/src/component/channelChoice/ChannelChoiceDesktop.scss
@@ -8,9 +8,9 @@
 
 .hr {
   composes: u-paddingAN u-marginTS u-marginBN u-marginHS u-borderNone from global;
-  border-bottom: #{1/$font-size}rem solid $zd-color-gainsboro !important;
+  border-bottom: #{1/$font-size}rem solid $zd-color-grey-200 !important;
   // ie hacks
-  color: $zd-color-gainsboro;
+  color: $zd-color-grey-200;
   min-height: 0;
 }
 
