--- a/src/component/chat/ChatOfflineMessageForm.scss
+++ b/src/component/chat/ChatOfflineMessageForm.scss
@@ -3,7 +3,7 @@
 .successContainer {
   font-size: $font-size-lrg;
   line-height: #{20/$font-size}rem;
-  color: $zd-color-oil;
+  color: $zd-color-grey-800;
 }
 
 .message {
