--- a/src/component/chat/ChatOperatingHours.scss
+++ b/src/component/chat/ChatOperatingHours.scss
@@ -37,7 +37,7 @@
 }
 
 .dropdownLabel {
-  color: $zd-color-dark-gray !important;
+  color: $zd-color-grey-800 !important;
   font-size: $font-size-lrg;
 }
 
