--- a/src/component/chat/chatting/HistoryLog.scss
+++ b/src/component/chat/chatting/HistoryLog.scss
@@ -10,7 +10,7 @@
 
   &:before,
   &:after {
-    background-color: $zd-color-iron;
+    background-color: $zd-color-grey-300;
     content: "";
     display: inline-block;
     height: #{1/$font-size}rem;
