--- a/src/component/helpCenter/HelpCenterResults.scss
+++ b/src/component/helpCenter/HelpCenterResults.scss
@@ -79,7 +79,7 @@
 }
 
 .contextualNoResults {
-  color: $zd-color-monsoon;
+  color: $zd-color-grey-500;
   align-items: center;
   display: flex;
   height: 100%;
