--- a/src/component/loading/LoadingBarContent.scss
+++ b/src/component/loading/LoadingBarContent.scss
@@ -8,7 +8,7 @@
 .barBase {
   height: #{12/$font-size}rem;
   border-radius: #{6.5/$font-size}rem;
-  background-color: $zd-color-platinum;
+  background-color: $zd-color-grey-400;
   margin-bottom: #{16/$font-size}rem;
 }
 
