--- a/src/styles/components/Icon.scss
+++ b/src/styles/components/Icon.scss
@@ -164,7 +164,7 @@
 }
 
 .Icon--tick {
-  border: #{2/$font-size}rem solid $zd-color-iron;
+  border: #{2/$font-size}rem solid $zd-color-grey-300;
   padding: $spacing-lrg;
   width: #{68/$font-size}rem;
   height: #{68/$font-size}rem;
