--- a/src/component/channelChoice/ChannelChoiceMenu.scss
+++ b/src/component/channelChoice/ChannelChoiceMenu.scss
@@ -19,7 +19,7 @@
   }
 
   &:focus, &:active {
-    background-color: $zd-color-white-smoke;
+    background-color: $zd-color-grey-100;
   }
 }
 
@@ -33,7 +33,7 @@
   composes: btnDisabled;
 
   svg path {
-    fill: $zd-color-iron !important;
+    fill: $zd-color-grey-300 !important;
   }
 }
 
@@ -166,6 +166,6 @@
 }
 
 .offlineLabelOption {
-  color: $zd-color-oil;
+  color: $zd-color-grey-800;
   margin-bottom: #{5/$font-size}rem;
 }
