--- a/src/component/chat/ChatContactDetailsPopup.scss
+++ b/src/component/chat/ChatContactDetailsPopup.scss
@@ -32,7 +32,7 @@
   width: 88%;
   font-size: $font-size-lrg;
   line-height: 1.4;
-  color: $zd-color-oil;
+  color: $zd-color-grey-800;
 
   a {
     cursor: pointer;
