--- a/src/component/chat/rating/RatingGroup.scss
+++ b/src/component/chat/rating/RatingGroup.scss
@@ -25,14 +25,14 @@
 .ratingIconActive {
   border: #{1/$font-size}rem solid $zd-color-gainsboro !important;
   border-radius: #{4/$font-size}rem;
-  background-color: $zd-color-platinum;
+  background-color: $zd-color-grey-400;
 
   svg > path {
-    fill: $zd-color-dark-gray;
+    fill: $zd-color-grey-800;
   }
 
   &:hover, &:focus, &:active {
-    background-color: $zd-color-platinum;
+    background-color: $zd-color-grey-400;
   }
 }
 
