--- a/src/component/helpCenter/HelpCenterArticle.scss
+++ b/src/component/helpCenter/HelpCenterArticle.scss
@@ -150,8 +150,8 @@
   }
 
   pre {
-    background: $zd-color-white-smoke;
-    border: #{1/$font-size}rem solid $zd-color-gainsboro;
+    background: $zd-color-grey-100;
+    border: #{1/$font-size}rem solid $zd-color-grey-200;
     border-radius: #{3/$font-size}rem;
     padding: #{10/$font-size}rem #{15/$font-size}rem;
     overflow: auto;
