--- a/src/component/chat/chatting/MessageError.scss
+++ b/src/component/chat/chatting/MessageError.scss
@@ -1,7 +1,13 @@
 @import '../../../styles/_vars.scss';
 
 .container {
+  background-color: transparent;
+  background-position: #{12/$font-size}rem #{12/$font-size}rem;
+  border: none;
   color: $error-color;
+  font-size: #{14/$font-size}rem;
+  padding: #{12/$font-size}rem;
+  padding-left: #{35/$font-size}rem;
 }
 
 .messageErrorLink {
