--- a/src/component/Launcher.scss
+++ b/src/component/Launcher.scss
@@ -18,6 +18,11 @@ $Button-nudge: 5;
   bottom: 0;
   letter-spacing: 0.6;
   font-size: #{15/$font-size}rem;
+
+  &:focus {
+    outline: none;
+    box-shadow: inset 0 0 0 #{3/$font-size}rem rgba($base-color, 0.4);
+  }
 }
 
 .wrapperMobile {
