--- a/src/component/chat/ChatHeader.scss
+++ b/src/component/chat/ChatHeader.scss
@@ -79,6 +79,16 @@
 
 .title {
   composes: u-textBold from global;
+
+  width: 100%;
+  max-height: #{15/$font-size}rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  /*! autoprefixer: off */
+  -webkit-box-orient: vertical; /* 2 */
+  /*! autoprefixer: on */
 }
 
 .subTextContainer {
