--- a/src/component/submitTicket/SubmitTicket.scss
+++ b/src/component/submitTicket/SubmitTicket.scss
@@ -62,8 +62,9 @@
 
 .error {
   composes: u-flex u-marginTL from global;
+  background-position: #{14/$font-size}rem #{14/$font-size}rem;
   padding: #{12/$font-size}rem;
-  padding-left: #{50/$font-size}rem;
+  padding-left: #{40/$font-size}rem;
 }
 
 .errorIcon {
