--- a/src/component/button/ButtonNav.scss
+++ b/src/component/button/ButtonNav.scss
@@ -5,12 +5,18 @@
 }
 
 .button {
-  composes: u-posAbsolute u-posStart--vertFlush from global;
+  composes: u-posAbsolute u-posStart--vertFlush u-borderNone from global;
   composes: Button from '../../styles/components/Button.scss';
   margin-top: #{10/$font-size}rem !important;
   margin-right: #{14/$font-size}rem !important;
   margin-left: #{14/$font-size}rem !important;
   padding: #{6/$font-size}rem !important;
+  background: transparent;
+
+  &:focus {
+    outline: none;
+    box-shadow: 0 0 0 #{3/$font-size}rem rgba($base-color, 0.4);
+  }
 }
 
 .left {
