--- a/src/component/helpCenter/HelpCenterDesktop.scss
+++ b/src/component/helpCenter/HelpCenterDesktop.scss
@@ -33,3 +33,9 @@
 .loadingBars {
   margin-top: #{5/$font-size}rem;
 }
+
+.button {
+  max-width: #{200/$font-size}rem !important;
+  padding-right: #{10/$font-size}rem !important;
+  padding-left: #{10/$font-size}rem !important;
+}
