--- a/src/component/submitTicket/SubmitTicketForm.scss
+++ b/src/component/submitTicket/SubmitTicketForm.scss
@@ -38,3 +38,9 @@
   margin-top: #{15/$font-size}rem;
   margin-bottom: #{15/$font-size}rem;
 }
+
+.button {
+  max-width: #{120/$font-size}rem !important;
+  padding-right: #{2/$font-size}rem !important;
+  padding-left: #{2/$font-size}rem !important;
+}
