--- a/src/component/chat/ChatHeader.scss
+++ b/src/component/chat/ChatHeader.scss
@@ -11,6 +11,7 @@
   position: absolute;
   box-sizing: border-box;
   box-shadow: 0 0 0 #{2/$font-size}rem white;
+  max-width: none;
 
   svg {
     padding-left: #{0.5/$font-size}rem;
