Fixup small mobile HC style issues

--- a/src/component/helpCenter/HelpCenterMobile.scss
+++ b/src/component/helpCenter/HelpCenterMobile.scss
@@ -14,7 +14,7 @@
 }
 
 .buttonContainer {
-  composes: u-posRelative from global;
+  composes: u-posRelative, u-marginVS from global;
 }
 
 .footerButton {
