--- a/src/component/chat/ChatContactDetailsPopup.scss
+++ b/src/component/chat/ChatContactDetailsPopup.scss
@@ -43,7 +43,7 @@
   color: $zd-color-grey-800;
   margin-bottom: #{16/$font-size}rem;
   text-align: center;
-  font-size: $font-size-lrg;
+  font-size: #{14/$font-size}rem;
 }
 
 .form {
