--- a/src/styles/components/Container.scss
+++ b/src/styles/components/Container.scss
@@ -8,7 +8,7 @@
 
 .Container--dashed {
   border-width: #{2/$font-size}rem;
-  border-color: $base-border-color;
+  border-color: $zd-color-grey-300;
   border-style: dashed;
   border-radius: #{5/$font-size}rem;
   background-color: $base-color;
