--- a/src/component/submitTicket/SubmitTicketForm.scss
+++ b/src/component/submitTicket/SubmitTicketForm.scss
@@ -2,7 +2,7 @@
 
 .form {
   composes: u-cf from global;
-  composes: Form from '../../styles/components/Form.scss';
+  margin: 0;
 }
 
 .container {
