--- a/src/component/container/ScrollContainer.scss
+++ b/src/component/container/ScrollContainer.scss
@@ -39,8 +39,11 @@
 }
 
 .title {
-  composes: u-textBold u-textCenter u-textXHeight from global;
+  composes: u-textBold u-textCenter from global;
   letter-spacing: #{0.3/$font-size}rem;
+  line-height: 1.2;
+  padding-left: #{30/$font-size}rem;
+  padding-right: #{30/$font-size}rem;
   font-size: $font-size-lrg;
 }
 
