--- a/src/component/chat/rating/RatingGroup.scss
+++ b/src/component/chat/rating/RatingGroup.scss
@@ -1,54 +1,55 @@
 @import '../../../styles/_vars.scss';
 
-.container {
-  margin-left: auto;
-
-  [dir='rtl'] & {
-    margin-left: 0;
-    margin-right: auto;
-  }
-}
-
 .ratingIcon {
   composes: u-borderTransparent from global;
-  display: inline-block !important;
-  padding: #{6/$font-size}rem;
-  height: #{16/$font-size}rem;
-  width: #{16/$font-size}rem;
+  background-color: transparent !important;
   box-sizing: content-box;
+  height: #{16/$font-size}rem;
+  padding: #{6/$font-size}rem;
+  width: #{16/$font-size}rem;
+  border-radius: #{30/$font-size}rem;
+  outline: none;
+  display: inline-block !important;
+
+  svg {
+    path, rect {
+      stroke: $zd-color-grey-600 !important;
+      fill: none !important;
+    }
+  }
 
   &:hover, &:focus, &:active {
-    background-color: $zd-color-white;
+    svg {
+      path, rect {
+        stroke: $zd-color-grey-800 !important;
+        fill: none !important;
+      }
+    }
   }
 }
 
 .ratingIconActive {
   border: #{1/$font-size}rem solid $zd-color-grey-200 !important;
-  border-radius: #{4/$font-size}rem;
-  background-color: $zd-color-grey-400;
+  background-color: $zd-color-grey-400 !important;
 
-  svg > path {
-    fill: $zd-color-grey-800;
+  svg {
+    path, rect {
+      fill: none !important;
+    }
   }
 
   &:hover, &:focus, &:active {
-    background-color: $zd-color-grey-400;
+    background-color: $zd-color-grey-400 !important;
   }
 }
 
-.leftRatingIcon {
-  composes: ratingIcon;
-  padding-top: #{5/$font-size}rem;
-  padding-bottom: #{7/$font-size}rem;
+.thumbDownIcon {
+  padding-top: #{8/$font-size}rem;
+  padding-bottom: #{4/$font-size}rem;
+  margin-left: #{4/$font-size}rem;
 
-  svg {
-    padding-left: #{1/$font-size}rem;
-  }
-}
-
-.icon {
   [dir='rtl'] & {
-    padding-left: 0 !important;
-    padding-right: #{15/$font-size}rem !important;
+    margin-left: 0;
+    margin-right: #{4/$font-size}rem;
   }
 }
