Remove references to old garden greys

--- a/src/component/button/ButtonIcon.scss
+++ b/src/component/button/ButtonIcon.scss
@@ -11,7 +11,7 @@
   }
 
   &:hover, &:focus, &:active {
-    background: $zd-color-anti-flash-white;
+    background: $zd-color-grey-100;
     border-radius: #{4/$font-size}rem;
     color: $zd-color-grey-800;
 
