--- a/src/component/chat/rating/RatingGroup.scss
+++ b/src/component/chat/rating/RatingGroup.scss
@@ -23,7 +23,7 @@
 }
 
 .ratingIconActive {
-  border: #{1/$font-size}rem solid $zd-color-gainsboro !important;
+  border: #{1/$font-size}rem solid $zd-color-grey-200 !important;
   border-radius: #{4/$font-size}rem;
   background-color: $zd-color-grey-400;
 
