--- a/src/styles/components/Icon.scss
+++ b/src/styles/components/Icon.scss
@@ -405,6 +405,7 @@
   svg {
     min-width: #{160/$font-size}rem;
     width: #{160/$font-size}rem;
+    height: #{80/$font-size}rem;
   }
 }
 
@@ -412,6 +413,7 @@
   svg {
     min-width: #{160/$font-size}rem;
     width: #{160/$font-size}rem;
+    height: #{80/$font-size}rem;
   }
 }
 
