--- a/src/styles/components/Icon.scss
+++ b/src/styles/components/Icon.scss
@@ -191,7 +191,7 @@
 
 .Icon--check {
   svg {
-    fill: $secondary-color;
+    fill: $zd-color-grey-500;
     margin-left: #{2/$font-size}rem;
     margin-top: #{2/$font-size}rem;
     min-width: #{10/$font-size}rem; /* 1 */
