--- a/src/styles/suit.scss
+++ b/src/styles/suit.scss
@@ -7,7 +7,6 @@
  */
 
 html {
-  font-family: sans-serif;
   /* 1 */
   -ms-text-size-adjust: 100%;
   /* 2 */
@@ -458,7 +457,7 @@ th {
 html {
   background: inherit;
   color: inherit;
-  font: 16px sans-serif;
+  line-height: normal;
 }
 
 a {
