--- a/src/component/talk/Talk.scss
+++ b/src/component/talk/Talk.scss
@@ -98,7 +98,7 @@
 }
 
 .offlineLink {
-  composes: u-isActionable u-textCenter u-userLinkColor from global;
+  composes: u-isActionable u-textCenter u-userLinkColor u-hiddenButton from global;
 }
 
 .button {
