Apply the old padding to avatar back

--- a/src/styles/components/Icon.scss
+++ b/src/styles/components/Icon.scss
@@ -214,6 +214,7 @@
     fill: $zd-color-white;
     color: $zd-color-white;
     width: #{17/$font-size}rem;
+    padding: #{6/$font-size}rem 0 0;
     display: inline-block;
     position: relative;
   }
