--- a/src/component/field/Dropdown/NestedDropdown.scss
+++ b/src/component/field/Dropdown/NestedDropdown.scss
@@ -1,4 +1,4 @@
-@import '../../styles/_vars.scss';
+@import '../../../styles/_vars.scss';
 
 .field {
   margin-bottom: $field-margin-bottom !important;
