Move QuickReplies from ChatLog to Chatting Screen
- Quick Replies Component is always located at the bottom of the Chatting Screen
- Quick Replies must be contained within the ScrollContainer

UI Behaviour: https://docs.google.com/spreadsheets/d/1A6jy9bY8ZxUACA3Yj8pTsxOlKq-j2Ak9Bq_RM63m5pA/edit#gid=855839032

--- a/src/component/chat/chatting/ChattingScreen.scss
+++ b/src/component/chat/chatting/ChattingScreen.scss
@@ -101,6 +101,10 @@
   padding-right: #{3/$font-size}rem !important;
 }
 
+.chatLogContainer {
+  min-height: calc(100% - 44px);
+}
+
 .chatLogContainerMobile {
   min-height: 100%;
   display: flex;
