--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,4 +6,5 @@
   @import './utils.scss';
   @import '@zendeskgarden/css-arrows';
   @import '@zendeskgarden/css-tooltips';
+  @import './slick.scss';
 }
