--- a/dev/templates/web_widget/all_channels.html
+++ b/dev/templates/web_widget/all_channels.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Web Widget Composite</h1>
   <%= htmlWebpackPlugin.options.snippet %>
-  <script>
+  <script nonce="<%= htmlWebpackPlugin.options.nonce %>">
       zE(function() {
         zE.devRender({
           embeds: {
