--- a/dev/templates/web_widget/new_chat.html
+++ b/dev/templates/web_widget/new_chat.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Web Widget New Chat</h1>
   <%= htmlWebpackPlugin.options.snippet %>
-  <script>
+  <script nonce="<%= htmlWebpackPlugin.options.nonce %>">
     zE(function() {
       zE.devRender({
         webWidgetCustomizations: true,
