--- a/src/component/chat/chatting/MessageError.scss
+++ b/src/component/chat/chatting/MessageError.scss
@@ -2,12 +2,14 @@
 
 .container {
   background-color: transparent;
-  background-position: #{12/$font-size}rem #{12/$font-size}rem;
+  background-position: #{14/$font-size}rem #{3/$font-size}rem;
   border: none;
   color: $error-color;
   font-size: #{14/$font-size}rem;
-  padding: #{12/$font-size}rem;
+  padding-bottom: #{12/$font-size}rem;
   padding-left: #{35/$font-size}rem;
+  padding-top: 0;
+  padding-right: 0;
 }
 
 .messageErrorLink {
